<resources>
    <string name="common_android_wear_notification_needs_update_text">An application requires an update to the Android Wear app.</string>
    <string name="common_android_wear_update_text">"This app won't run unless you update the Android Wear app."</string>
    <string name="common_android_wear_update_title">Update Android Wear</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"This app won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"This app won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"This app won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_needs_installation_title">An application requires installation of Google Play services.</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_text">Google Play services, which some of your applications rely on, is not supported by your device. Please contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"This app won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="commono_google_play_services_api_unavailable_text">This app requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_confirm">Confirm</string>
    <string name="action_delete">Delete</string>
    <string name="action_go_next">Next</string>
    <string name="action_go_previous">Previous</string>
    <string name="action_insert">Create</string>
    <string name="action_no">No</string>
    <string name="action_ok">OK</string>
    <string name="action_preferences">Options</string>
    <string name="action_update">Edit</string>
    <string name="action_yes">Yes</string>
    <string name="actionbar_text">GLIMP S</string>
    <string name="app_name">Glimp S</string>
    <string name="bluetoothle_exception_1">Bluetooth is missing</string>
    <string name="bluetoothle_exception_2">Bluetooth is disabled</string>
    <string name="bluetoothle_exception_3">Bluetooth service not started</string>
    <string name="bluetoothle_exception_4">Bluetooth connect failed</string>
    <string name="bluetoothle_exception_5">Bluetooth reconnect failed</string>
    <string name="bluetoothle_exception_6">Bluetooth requested service missing</string>
    <string name="bluetoothle_exception_7">Bluetooth requested characteristic missing</string>
    <string name="bluetoothle_exception_8">Bluetooth requested descriptor missing</string>
    <string name="bluetoothle_exception_9">Bluetooth GATT missing</string>
    <string name="common_activity_edit_string_msg_back">To go back please select the up button on top left corner</string>
    <string name="common_activity_query_string_action_cancel">@string/action_cancel</string>
    <string name="common_activity_query_string_action_delete">@string/action_delete</string>
    <string name="common_activity_query_string_action_exit">Exit</string>
    <string name="common_activity_query_string_action_exit_no_save">Exit without saving</string>
    <string name="common_activity_query_string_action_insert">@string/action_insert</string>
    <string name="common_activity_query_string_action_preferences">@string/preferences_title</string>
    <string name="common_activity_query_string_action_save">Save</string>
    <string name="common_activity_query_string_action_update">@string/action_update</string>
    <string name="common_activity_query_string_dlg_delete_message">Do you really want to delete the record?</string>
    <string name="common_activity_query_string_dlg_delete_title">Confirm deletion</string>
    <string name="common_activity_query_string_hint_filter">Filter</string>
    <string name="common_activity_query_string_menu_title">Actions</string>
    <string name="common_activity_select_directory_string_action_cancel">@string/action_cancel</string>
    <string name="common_activity_select_directory_string_action_insert">@string/action_insert</string>
    <string name="common_activity_select_directory_string_action_select">Select</string>
    <string name="common_activity_t_string_dlg_confirm_no">@string/action_no</string>
    <string name="common_activity_t_string_dlg_confirm_yes">@string/action_yes</string>
    <string name="common_activity_t_string_dlg_message_ok">@string/action_ok</string>
    <string name="conversion_exception_1">"Cannot convert '%1$s' in integer"</string>
    <string name="conversion_exception_2">"Cannot convert '%1$s' in decimal"</string>
    <string name="conversion_exception_3">"Cannot convert '%1$s' in dateRead"</string>
    <string name="conversion_exception_4">"Cannot convert '%1$s' in time"</string>
    <string name="conversion_exception_5">"Cannot convert '%1$s' in long integer"</string>
    <string name="csv_exception_1">Row %1$d, field %2$s, value %3$s: Unsupported data file versione</string>
    <string name="csv_exception_2">Row %1$d, field %2$s, value %3$s: Cannot convert field in integer</string>
    <string name="csv_exception_3">Row %1$d, field %2$s, value %3$s: Cannot convert field in decimal</string>
    <string name="csv_exception_4">Row %1$d, field %2$s, value %3$s: Invalid dateRead-time format</string>
    <string name="date_t_exception_1">"'%1$s' is not a valid year"</string>
    <string name="date_t_exception_2">"'%2$s' is not a valid month"</string>
    <string name="date_t_exception_3">"'%3$s' is not a valid day"</string>
    <string name="date_t_exception_4">"'%4$s' is not a valid hour"</string>
    <string name="date_t_exception_5">"'%5$s' is not a valid minute"</string>
    <string name="date_t_exception_6">"'%6$s' is not a valid second"</string>
    <string name="date_t_exception_7">"'%3$s-%2$s-%1$s %4$s:%5$s:%6$s' is not a valid dateRead"</string>
    <string name="date_t_exception_8">"String '%8$s' cannot be converted in dateRead-time"</string>
    <string name="exception_t_0">No error</string>
    <string name="exception_t_unexpected">Unexpected exception: class %1$s, code %2$d</string>
    <string name="glucose_direction_0" />
    <string name="glucose_direction_1">fast growing</string>
    <string name="glucose_direction_2">fast growing</string>
    <string name="glucose_direction_3">growing</string>
    <string name="glucose_direction_4">stable</string>
    <string name="glucose_direction_5">decrease</string>
    <string name="glucose_direction_6">fast decrease</string>
    <string name="glucose_direction_7">fast decrease</string>
    <string name="glucose_direction_8" />
    <string name="glucose_direction_9" />
    <string name="initialize_hint">Move back of mobile near new Libre sensor</string>
    <string name="initializer_message">Waiting for sensor</string>
    <string name="libre_pro_not_compatible">Glimp S is not compatible with Libre Pro<sup><small>®</small></sup> sensors</string>
    <string name="message_no">No</string>
    <string name="message_waiting">...</string>
    <string name="message_yes">Yes</string>
    <string name="misurazione_glicemia_exception_1">The command is not supported</string>
    <string name="misurazione_glicemia_exception_15">Error with no information</string>
    <string name="misurazione_glicemia_exception_16">The specified block is not available</string>
    <string name="misurazione_glicemia_exception_160">This sensor is expired and cannot be restarted anymore</string>
    <string name="misurazione_glicemia_exception_163">This sensor is not started</string>
    <string name="misurazione_glicemia_exception_164">This sensor is starting up</string>
    <string name="misurazione_glicemia_exception_165">This sensor is starting</string>
    <string name="misurazione_glicemia_exception_166">This sensor is expired</string>
    <string name="misurazione_glicemia_exception_167">This sensor is expired</string>
    <string name="misurazione_glicemia_exception_168">This sensor is broken</string>
    <string name="misurazione_glicemia_exception_17">The specified block is already locked</string>
    <string name="misurazione_glicemia_exception_18">The specified block is locked and its content cannot be changed</string>
    <string name="misurazione_glicemia_exception_19">The specified block was not successfully programmed</string>
    <string name="misurazione_glicemia_exception_2">The command is not recognized</string>
    <string name="misurazione_glicemia_exception_20">The specified block was not successfully locked</string>
    <string name="misurazione_glicemia_exception_257">Error in sensor data: Live block offset out of range</string>
    <string name="misurazione_glicemia_exception_258">Error in sensor data: Hist block offset out of range</string>
    <string name="misurazione_glicemia_exception_259">Error in sensor data: Not coherent data. Please read again the sensor</string>
    <string name="warning_footer">Sensors initialized by Abbott<sup><small>®</small></sup> Reader can be read by <a href="market://details?id=it.ct.glicemia">Glimp</a> app</string>
    <string name="warning_header">This app initializes Abbott Freestyle Libre<sup><small>®</small></sup> sensors</string>
    <string name="warning_initialize">YES, I WANT TO INITIALIZE LIBRE SENSOR</string>
    <string name="warning_warning">Initialized sensors cannot be read by Abbott<sup><small>®</small></sup>" reader
Are you really sure you want to initialize the sensor?"</string>
    <string name="warning_warning_title">WARNING</string>
</resources>